--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -87,7 +87,8 @@ jobs:
             -var="location=${{ secrets.AZURE_LOCATION }}" \
             -var="tfstate_rg_name=${{ secrets.TFSTATE_RG_NAME }}" \
             -var="storage_account_name=${{ secrets.TFSTATE_STORAGE_ACCOUNT }}" \
-            -var="container_name=${{ secrets.TFSTATE_CONTAINER_NAME }}"
+            -var="container_name=${{ secrets.TFSTATE_CONTAINER_NAME }}" \
+            -var="subscription_id=${{ secrets.AZURE_SUBSCRIPTION_ID }}"
 
       # (2) Deploy aplikacji: init z backendem remote
       - name: Terraform init (app, remote backend)
