--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,4 +1,4 @@
-    name: Build, Test and Push Docker Image
+name: Build, Test and Push Docker Image
 
 on:
   push:
@@ -83,7 +83,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: test-image
     env:
-      IMAGE_NAME: marak89/bur9102a
+      IMAGE_NAME: realeltales/lekcja1
 
     steps:
       - name: Checkout repo
