--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -85,6 +85,7 @@ jobs:
 
   build-and-push:
     runs-on: ubuntu-latest
+    needs: [ test-image ]
     env:
       IMAGE_NAME: realeltales/lekcja1
     outputs:
